2018-09-06  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1111

	* src/arts_api.cc (get_covariance_matrix_block):
	Fixed bug leading to always returning the first block
	in the matrix.

2018-09-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1110

	* src/geodetic.cc (cart2poslos): More tweaks to handle numerical
	problems. Changed "Check that not lon changed with 180 deg". The
	old version did not resolve changes of 180 and 360.

2018-09-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1109

	* src/geodetic.cc (cart2poslos): Removed a consistency check I
	added some years ago. Now stumbled upon a case that did not show
	consistency with the alternative way to set za. In this case the
	alternative way clearly gave wrong result, and it seems that the
	code change I did works better than the old (now alternative) way.
	So removed the check.
2018-09-04  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1108

	* controlfiles/general/general.arts: lat_true and lon_true are now
	set to be empty.

	* src/ppath.cc (ppath_start_stepping): Commented out first checks
	for 3D. They were meant to provide a more clear error message, but
	they can result in fails for actually OK set-ups at high latitudes.

	* src/m_checked.cc (atmgeom_checkedCalc): The method now also
	checks lat_true and lon_true.

2018-09-03  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1107

	* src/m_disort.cc(DisortCalcWithARTSSurface):

	Adapted function placeholder to new signature of DisortCalcWithARTSSurface.

2018-09-03  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-1106

	* 3rdparty/disort/LINPAK.f:

	Renamed functions with the same name as other BLAS function to
	avoid clashes suspected to lead to weird bugs when using ARTS
	through python.

	* src/disort.cc(check_disort_input):

	Updated error message on inhomogeneous scat data grids to mention