@@ -1,0 +1,260 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Sparse nrows="21" ncols="11">
+<RowIndex nelem="124">
+0
+0
+0
+1
+1
+1
+1
+2
+2
+2
+2
+3
+3
+3
+3
+3
+4
+4
+4
+4
+4
+4
+5
+5
+5
+5
+5
+5
+6
+6
+6
+6
+6
+6
+7
+7
+7
+7
+7
+7
+7
+8
+8
+8
+8
+8
+8
+9
+9
+9
+9
+9
+9
+9
+10
+10
+10
+10
+10
+10
+10
+11
+11
+11
+11
+11
+11
+11
+12
+12
+12
+12
+12
+12
+12
+12
+13
+13
+13
+13
+13
+13
+13
+14
+14
+14
+14
+14
+14
+14
+15
+15
+15
+15
+15
+15
+15
+16
+16
+16
+16
+16
+16
+17
+17
+17
+17
+17
+17
+18
+18
+18
+18
+18
+19
+19
+19
+19
+19
+20
+20
+20
+20
+20
+</RowIndex>
+<ColIndex nelem="124">
+0
+1
+2
+0
+1
+2
+3
+0
+1
+2
+3
+0
+1
+2
+3
+4
+0
+1
+2
+3
+4
+5
+0
+1
+2
+3
+4
+5
+1
+2
+3
+4
+5
+6
+1
+2
+3
+4
+5
+6
+7
+2
+3
+4
+5
+6
+7
+2
+3
+4
+5
+6
+7
+8
+2
+3
+4
+5
+6
+7
+8
+3
+4
+5
+6
+7
+8
+9
+3
+4
+5
+6
+7
+8
+9
+10
+4
+5
+6
+7
+8
+9
+10
+4
+5
+6
+7
+8
+9
+10
+4
+5
+6
+7
+8
+9
+10
+5
+6
+7
+8
+9
+10
+5
+6
+7
+8
+9
+10
+6
+7
+8
+9
+10
+6
+7
+8
+9
+10
+6
+7
+8
+9
+10
+</ColIndex>
+<SparseData nelem="124">
+2 0.114865238535235 0.00855364069841786 0.462889250364075 0.49549319611955 0.0366312777774684 0.00338016233395115 0.114865238535235 2 0.147261041931154 0.0134758939981709 0.0304125681181317 0.527194276231454 0.557970846645397 0.0507764706846736 0.00557643408009884 0.00855364069841786 0.147261041931154 2 0.181435906578825 0.0197967512144078 0.00254526760267962 0.00254526760267962 0.0434284703768577 0.587815229883044 0.616730335793163 0.0669988894880074 0.00855364069841786 0.0134758939981709 0.181435906578825 2 0.216736046443792 0.0275275734661008 0.00403096542901408 0.00438615715299603 0.0586443182477876 0.644727010612319 0.671821962478325 0.0850303050288596 0.0123809214724152 0.00204552924986793 0.0197967512144078 0.216736046443792 2 0.25263277252606 0.0366312777774684 0.00601617001451006 0.00696240597762922 0.075805828801917 0.69803614186264 0.72339348037365 0.104593644255703 0.0170986189593721 0.00312478036651626 0.00254526760267962 0.0275275734661008 0.25263277252606 2 0.288708806034403 0.0470354917120182 0.00855364069841786 0.0103578487411955 0.0946376134217431 0.747919911582378 0.771642613658248 0.125420449656143 0.0227210207278031 0.00454462828044025 0.00403096542901408 0.0366312777774684 0.288708806034403 2 0.324641222363696 0.0586443182477876 0.0116819546863905 0.00254526760267962 0.0146270078510719 0.114865238535235 0.794589426395423 0.816788405305652 0.147261041931154 0.0292403717007878 0.00634379901051596 0.00601617001451006 0.0470354917120182 0.324641222363696 2 0.360184624295905 0.0713479866945048 0.0154257408016513 0.00254526760267962 0.0197967512144078 0.136228727833666 0.838267483398645 0.859054217515379 0.16988963747054 0.0366312777774684 0.00855364069841786 0.0586443182477876 0.360184624295905 2 0.39515608467303 0.0850303050288596 0.00378954418148564 0.0258698027778996 0.158489951199687 0.879175600985446 0.898657928234443 0.193106166253634 0.0116819546863905 0.0713479866945048 0.39515608467303 2 0.429422344683395 0.00539465960288542 0.0328290376661048 0.181435906578825 0.917526699998678 0.935806560190511 0.00254526760267962 0.0154257408016513 0.0850303050288596 0.429422344683395 2 
+</SparseData>
+</Sparse>
+</arts>
