@@ -1,0 +1,120 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Sparse nrows="21" ncols="11">
+<RowIndex nelem="54">
+0
+1
+1
+2
+2
+3
+3
+4
+4
+4
+5
+5
+6
+6
+6
+7
+7
+8
+8
+8
+9
+9
+10
+10
+10
+11
+11
+12
+12
+12
+13
+13
+13
+14
+14
+14
+15
+15
+15
+16
+16
+16
+17
+17
+17
+17
+18
+18
+18
+19
+19
+19
+20
+20
+</RowIndex>
+<ColIndex nelem="54">
+0
+0
+1
+1
+2
+1
+2
+1
+2
+3
+2
+3
+2
+3
+4
+3
+4
+3
+4
+5
+4
+5
+4
+5
+6
+5
+6
+5
+6
+7
+6
+7
+8
+6
+7
+8
+7
+8
+9
+7
+8
+9
+7
+8
+9
+10
+8
+9
+10
+8
+9
+10
+9
+10
+</ColIndex>
+<SparseData nelem="54">
+2 0.234937628460105 0.285403532417088 2 0.00221579100778461 0.338026630812132 0.391978018986735 0.00221579100778461 2 0.00630222319688888 0.446539203937592 0.501106881449955 0.00630222319688888 2 0.0143339500752248 0.5551884390403 0.608392245704766 0.0143339500752248 2 0.0276682113087893 0.660415523874315 0.711031605279674 0.0276682113087893 2 0.0472193914849015 0.760077650541974 0.807443417217195 0.0472193914849015 2 0.0733408194274077 0.853061338136924 0.896897972023474 0.00221579100778461 0.0733408194274077 2 0.105861003865418 0.938946772450442 0.97922206039088 0.00457662811857233 0.105861003865418 2 0.144206424394493 0.00323363304911398 1.01775405949854 1.0545848480861 0.00846751650238905 0.144206424394493 2 0.187548701725017 0.00630222319688888 1.08976508840606 1.12335140650539 0.187548701725017 2 
+</SparseData>
+</Sparse>
+</arts>
