@@ -1,0 +1,78 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Sparse nrows="21" ncols="11">
+<RowIndex nelem="33">
+0
+1
+1
+2
+3
+3
+4
+5
+5
+6
+7
+7
+8
+9
+9
+10
+11
+11
+12
+13
+13
+14
+15
+15
+16
+17
+17
+18
+18
+19
+19
+20
+20
+</RowIndex>
+<ColIndex nelem="33">
+0
+0
+1
+1
+1
+2
+2
+2
+3
+3
+3
+4
+4
+4
+5
+5
+5
+6
+6
+6
+7
+7
+7
+8
+8
+8
+9
+9
+10
+9
+10
+9
+10
+</ColIndex>
+<SparseData nelem="33">
+2 0.149891047331051 0.235942626524955 2 0.31434517645718 0.386075168948363 2 0.45194965184843 0.512657508638688 2 0.568783640388171 0.620827871646783 2 0.669219876150405 0.714331066789374 2 0.756484146566772 0.795960840326557 2 0.83300819908574 0.867843775232434 2 0.900659897689465 0.931627224515114 2 0.9608977115147 0.988607105874308 2 0.0550136651428994 1.01487705117627 1.03981687266548 0.0550136651428994 2 
+</SparseData>
+</Sparse>
+</arts>
